@@ -1,7 +1,9 @@
 <!--// $Id$ //-->
 <DIV{if !$note.last} STYLE="page-break-after: always"{/if}>
 <DIV align="right" class="sdr">
-	{t 0=$note.cdate|date_format:"%Y/%m/%d"}Created: $0{/t}{if $note.division_cplace neq ""}, {$note.division_cplace}{/if}
+{t}Draw-up date:{/t} {$note.cdate|date_format:"%Y/%m/%d"}{if $note.division_cplace neq ""}, {$note.division_cplace}{/if}
+<BR>
+{t}Deadline:{/t} {$note.pdate|date_format:"%Y/%m/%d"}
 </DIV>
 
 <H2 align="center" class="hdf">
